# ChessPoint

./: CMakeLists.txt  README.md  bishop.cpp  bishop.h  calculatepoints.cpp  calculatepoints.h  chessboard.cpp  chessboard.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  pieces.cpp  pieces.h  processtext.cpp  processtext.h  quen.cpp  quen.h  rook.cpp  rook.h  scanchessboard.cpp  scanchessboard.h
